css/main.css
/* IMPORT FONTS */
/* OpenSans */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');

/* COLOR TRAILS */
/* Greenish: rgb(152, 255, 143) */
/* Bluish: #03719C */

html {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #252525;
    font-family: 'Open Sans', sans-serif;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}


h1, 
h2, 
h3, 
h4, 
p {
    color: white;
    margin: 0;
}

/* ========================= */
/* GLOBAL STYLES */
/* ========================= */
a {
    text-decoration: none;
}

/* ================== */
/* BUTTON STYLES */
/* ================== */

.btn {
    background-color: transparent;
    padding: 0.9em;
    color: rgb(236, 236, 236);
    font-size: 1.1em;
    border-radius: 5px;
    cursor: pointer;
    border: 2px solid rgb(152, 255, 143);
    transition: background-color, color 250ms ease-in;
}

.btn:hover {
    background-color: rgb(152, 255, 143);
    color: rgb(32, 32, 32);
}

.btn-filled {
    color: rgb(32, 32, 32);
    background-color: rgb(152, 255, 143);
}

.btn-filled:hover {
    border: 2px solid white;
}

.primary {
    background-color: rgb(152, 255, 143);
}

.secondary {
    background-color: #016795;
}

.btn:visited {
    border: 2px solid #fff;
}

/* ================= */
/* END BUTTON STYLES */
/* ================= */


/* LOGO STYLE AND ANIMATION */
#logo {
    letter-spacing: 4px;
    transition: letter-spacing 200ms ease-in-out;
    font-size: 1.2em;
}

#logo:hover {
    letter-spacing: 1px;
}

/* Hide Desktop Navigation: Mobile Size */
.desktop-nav {
    display: none;
}

/* NAVIGATION STYLES */
nav > a {
    color: #ffffff;
    padding: 20px;
}

nav ul {
    list-style: none;
}

nav ul li {
    margin: 0 20px;
    padding: 10px;
    border-radius: 4%;
    border: 2px solid transparent;
    align-self: flex-end;
    transition: border 200ms ease-in;
}

nav ul li a {
    color: rgb(221, 221, 221);
    letter-spacing: 1px;
    font-size: 1.1em;
}


/* Desktop navigation specific */
.desktop-nav {
    width: 100%;
    justify-content: space-between;
    align-content: center;
}

.desktop-nav ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

/* Highlight active links */
.active-link {
    background-color:  rgb(152, 255, 143);
}

.active-link a {
    color: rgb(34, 34, 34) !important;
}

/* Highlight non-active links on hover */
nav ul li:hover:not(.active-link) {
    border-bottom: 2px solid rgb(152, 255, 143);
    border-top: 2px solid rgb(152, 255, 143);
}

nav ul li:hover:not(.active-link) a{
    color: rgb(255, 255, 255);
}

/* Mobile Navigation Specific */
.mobile-nav {
    display: none;
    height: 100vh;
    width: 100vw;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(19, 19, 19, 0.9);
}

.mobile-nav ul {
    height: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
}

.mobile-nav ul li {
    margin-bottom: 20px;
}

.mobile-nav ul li a {
    font-size: 1.3em;
}

.nav-button {
    z-index: 9;
    position: fixed;
    bottom: 30px;
    right: 30px;
    background-color: #fff !important;
    border: none;
    padding: 10px;
    cursor: pointer;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    cursor: pointer;
    text-align: center;
}

.show-nav {
    display: block;
}

/* SECTION TITLE */
.section-title {
    margin-bottom: 30px;
    width: fit-content;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
}

.section-title h2 {
    margin-bottom: 8px;
    text-transform: uppercase;
    font-weight: 300;
    font-size: 1.3em;
    letter-spacing: 2px;
}

.border-bottom {
    border-bottom: 2px solid rgb(152, 255, 143);
    width: 40%;
}

section {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    margin-bottom: 40px;
    min-height: 200px;
}

.hero-title,
.hero-subtitle {
    font-family: 'Raleway', sans-serif;
}

.hero-title {
    font-weight: 300;
}

.hero-subtitle {
    font-weight: 400;
    color: rgb(153, 153, 153);
    margin-top: 10px;
}


/* ==================== */
/* HOME PAGE SPECIFIC STYLES */
/* ==================== */
.avatar-grid {
    display: flex;
    flex-flow: column nowrap;
    width: 100%;
    height: 100%;
}

.avatar-grid > * {
    margin-bottom: 20px;
}

.circular {
    border-radius: 50%;
}
.circle-avatar {
    margin: 10%;
    width: 80%;
    border: 2px dashed rgb(152, 255, 143);
    cursor: pointer;
    transition: transform 300ms ease-in-out;
}

.circle-avatar:hover {
    transform: scale(1.1);
    border: 2px solid rgb(152, 255, 143);
}


/* ==================== */
/* FEATURED ARTICLE SECTION */
/* ==================== */
.featured-article {
    width: 98%;
    margin: 1%;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

.article-banner-img {
    width: 100%;
}

.article-details {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

.article-title,
.article-subtitle {
    font-family: 'Raleway', sans-serif;
    font-weight: 400;
    margin-top: 10px;
    order: -1;
    letter-spacing: 2px;
}

.article-title  {
    text-align: center;
    font-size: 1.3em;
}

.article-subtitle {
    color: #ccc;
    margin-bottom: 10px;
    letter-spacing: 0;
}

.article-body {
    font-size: 0.9em;
    text-align: center;
    margin-top: 13px;
    color: rgb(230, 230, 230);
}

.author-line {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    width: 92%;
    margin: 15px 4%;
}

.author-line > * {
    margin: 0;
}

.author-line figure img {
    height: 2em;
}

.author-line button {
    font-size: 0.8em;
    margin-top: 20px;
    flex-basis: 100%;
}

.featured-article figure {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    align-self: flex-start;
    margin-right: auto;
}

.featured-article figcaption {
    margin-left: 10px;
    color: rgb(230, 230, 230);
}

/* View Count (EYE ICON + COUNT) */
.featured-article .view-count * {
    color: #ccc;
    font-size: 0.95em;
    transition: color, transform 100ms ease-out;
}

.featured-article .view-count i:hover {
    color: #f1f1f1;
    transform: scale(1.05);
}



/* ========================== */
/* UTILS */
.mt-2 {
    margin-top: 2em;
}

/* ========================= */
/* MEDIA QUERIES */
/* ========================= */

/* TABLET SIZE */
@media (min-width: 768px) {
    /* FOR TESTING ONLY */
    /* body {
        background-color: #555;
    } */

    /* Hide Mobile Navigation */
    .mobile-nav,.nav-button {
        display: none !important;
    }

    /* Show desktop Navigation */
    .desktop-nav {
        display: flex;
    }

    /* Hero Section */
    header {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        padding: 50px 20%;
        margin-bottom: 3em;
        background-color: rgb(32, 32, 32);
        align-items: center;
    }

    .hero-image {
        order: 2;
        flex-basis: 50%;
        height: 40vh;
    }

    /* HOME PAGE */
    /* OUR STAFF SECTION */
    .avatar-grid {
        flex-flow: row wrap;
        margin: 4% 0;
        justify-content: center;
    }

    .avatar-grid > * {
        margin: 30px 20px;
        flex-basis: 22%;
        width: 100%;
    }

    /* FEATURED ARTICLE SECTION */
    .featured-article {
        flex-flow: row nowrap;
    }

     
    
    .featured-article .article-title {
        font-size: 2em;
    }

    .author-line button {
        margin: 0;
        flex-basis: auto;
    }

    .author-line figure {
        margin: 0;
    }

    .author-line {
        align-items: center;
        justify-content: space-between;
    }

    .article-title,
    .article-subtitle {
        order: 0;
    }

    .article-banner-img {
        flex-basis: 30%;
        border-radius: 5px;
        width: 30%;
    }

    .article-details {
        margin-left: 30px;
    }
}

/* DESKTOP SIZE */
@media (min-width: 1224px) {
    
    /* GLOBALS */
    section {
        padding: 0 20%;
    }

    /* HOME PAGE */
    /* OUR STAFF SECTION */
    .avatar-grid > * {
        margin: 30px 20px;
        flex-basis: 20%;
        width: 100%;
    }
    
}

